--- a/index.html
+++ b/index.html
@@ -61,6 +61,15 @@
             <p class="links__title">Пишу</p>
             <a class="linsk__link" href="http://ya.ru">про личный бюджет</a>
           </li>
+          <li class="links__link">
+            <p class="links__title">Кредо</p>
+            <a>😆😆😆😆😆😆😆😆</a>
+          </li>
+          <li class="links__link">
+            <p class="links__title">Работаю</p>
+            <a class="linsk__link" href="http://ya.ru">QA Engineer</a>
+          </li>
+        
         </ul>
       </section>
     </main>
